--- a/reports/2022-09-26.md
+++ b/reports/2022-09-26.md
@@ -27,6 +27,7 @@
  * *Jessie Xu*
  * *Wassim Wazzi*
  * We are meeting tuesday to play splendor
+ * We need to create a mockup for the UI.
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -38,6 +39,8 @@
  * *Youssef Samaan*
  * *Jessie Xu*
  * *Wassim Wazzi*
+    - Set up the LS.
+    - Create a development process file.
  * 
 
 ### Tasks missed, scheduled for this report
@@ -48,7 +51,8 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
- * *Second week: nothing*
+ * Having to resolve errors while setting up Docker.
+
 
 
 ### Top 3 lessons learned since last report
