I added my part

--- a/reports/2022-09-26.md
+++ b/reports/2022-09-26.md
@@ -24,6 +24,9 @@
  * *Rui Cong Su*
  * *Felicia Sun*
  * *Youssef Samaan*
+   * meet and play splendor on Tuesday.
+   * talk about and do M1.
+   * try out the comp 361 restify exercises.
  * *Jessie Xu*
  * *Wassim Wazzi*
  * We are meeting tuesday to play splendor
@@ -31,14 +34,13 @@
 ### Tasks achieved, scheduled for this report, per team member
 
  * *Kevin Yu*
- * 
  * *Rui Cong Su*
  * *Felicia Sun*
- * 
  * *Youssef Samaan*
+   * meet up and get to know the team.
+   * Installed the LobbyService and tried it out.
  * *Jessie Xu*
  * *Wassim Wazzi*
- * 
 
 ### Tasks missed, scheduled for this report
 
@@ -54,6 +56,8 @@
 ### Top 3 lessons learned since last report
 
  * *Some members learned git*
+ * *Some members learned about REST*
+ * *Some members got familiar with the LobbyService*
 
 ### 3 most critical bugs in current functionality (optional)
 
