--- a/reports/2022-09-26.md
+++ b/reports/2022-09-26.md
@@ -31,14 +31,14 @@
 ### Tasks achieved, scheduled for this report, per team member
 
  * *Kevin Yu*
- * 
+ * Started the report 
  * *Rui Cong Su*
  * *Felicia Sun*
- * 
+ * Organised when2meet
  * *Youssef Samaan*
  * *Jessie Xu*
  * *Wassim Wazzi*
- * 
+ * Proposed using Jira
 
 ### Tasks missed, scheduled for this report
 
@@ -53,7 +53,7 @@
 
 ### Top 3 lessons learned since last report
 
- * *Some members learned git*
+ *We started thinking about the sketch*
 
 ### 3 most critical bugs in current functionality (optional)
 
