--- a/reports/2022-09-26.md
+++ b/reports/2022-09-26.md
@@ -32,6 +32,9 @@
    * Try out the comp 361 restify exercises.
  * *Jessie Xu*
  * *Wassim Wazzi*
+   * Play Splendor with the team
+   * Practice restify exercises
+   * Start working on M1  
  * We are meeting tuesday to play splendor
  * We need to create a mockup for the UI.
 
@@ -77,12 +80,12 @@
 
 ### Contribution statement
 
- * *Kevin contributed 0% of the work since last week.*
- * *Rui contributed 0% of the work since last week.*
- * *Felicia contributed 0% of the work since last week.*
- * *Youssef contributed 0% of the work since last week.*
- * *Jessie contributed 0% of the work since last week.*
- * *Wassim contributed 0% of the work since last week.*
+ * *Kevin contributed 16.66% of the work since last week.*
+ * *Rui contributed 16.66% of the work since last week.*
+ * *Felicia contributed 16.66% of the work since last week.*
+ * *Youssef contributed 16.66% of the work since last week.*
+ * *Jessie contributed 16.66% of the work since last week.*
+ * *Wassim contributed 16.66% of the work since last week.*
 
 ### Team mood
 
