added kevin's contributions

--- a/reports/2022-10-03.md
+++ b/reports/2022-10-03.md
@@ -30,11 +30,19 @@
 ### Tasks achieved, scheduled for this report, per team member
 
  * *Kevin Yu*
+    * Wrote the descriptions for the M1 
+    * Drew the sidebar for the cards in Figma
+    * Discussed the layout of the game with the team
  * *Rui Cong Su*
+    * Discussed the layout of the game with the team
  * *Felicia Sun*
+    * Discussed the layout of the game with the team
  * *Youssef Samaan*
+    * Discussed the layout of the game with the team
  * *Jessie Xu*
+    * Discussed the layout of the game with the team
  * *Wassim Wazzi*
+     * Discussed the layout of the game with the team
 
 ### Tasks missed, scheduled for this report
 
@@ -43,7 +51,7 @@
  * *Nothing so far*
 
 ### Top 3 unexpected challenges encountered since last report
-
+    * Agreeing on a layout
 
 ### Top 3 lessons learned since last report
 
