Added Rui's contributions and one challenge

--- a/reports/2022-10-03.md
+++ b/reports/2022-10-03.md
@@ -34,6 +34,7 @@
     * Drew the sidebar for the cards in Figma
     * Discussed the layout of the game with the team
  * *Rui Cong Su*
+    * Reviewed and elaborated onto descriptions for the M1
     * Discussed the layout of the game with the team
  * *Felicia Sun*
     * Discussed the layout of the game with the team
@@ -51,7 +52,8 @@
  * *Nothing so far*
 
 ### Top 3 unexpected challenges encountered since last report
-    * Agreeing on a layout
+ * Agreeing on a layout
+ * Splitting tasks (only resolved late in the week)
 
 ### Top 3 lessons learned since last report
 
