added youssef's contributions

--- a/reports/2022-10-03.md
+++ b/reports/2022-10-03.md
@@ -4,77 +4,82 @@
 
 ### Group
 
- * Hexanome-06
- * Python
+* Hexanome-06
+* Python
 
 ### Team Members
 
- * Kevin Yu
- * Rui Cong Su
- * Felicia Sun
- * Youssef Samaan
- * Jessie Xu
- * Wassim Wazzi
+* Kevin Yu
+* Rui Cong Su
+* Felicia Sun
+* Youssef Samaan
+* Jessie Xu
+* Wassim Wazzi
 
 ## Status
 
 ### 3 most outstanding tasks scheduled until the next report, per team member
 
- * *Kevin Yu*
- * *Rui Cong Su*
- * *Felicia Sun*
- * *Youssef Samaan*
- * *Jessie Xu*
- * *Wassim Wazzi*
+* *Kevin Yu*
+* *Rui Cong Su*
+* *Felicia Sun*
+* *Youssef Samaan*
+   * Do the restify exercise.
+   * Do some exercises from the lecture.
+   * Play the game again with the team on Tuesday.
+* *Jessie Xu*
+* *Wassim Wazzi*
 
 ### Tasks achieved, scheduled for this report, per team member
 
- * *Kevin Yu*
-    * Wrote the descriptions for the M1 
-    * Drew the sidebar for the cards in Figma
-    * Discussed the layout of the game with the team
- * *Rui Cong Su*
-    * Reviewed and elaborated onto descriptions for the M1
-    * Discussed the layout of the game with the team
- * *Felicia Sun*
-    * Discussed the layout of the game with the team
- * *Youssef Samaan*
-    * Discussed the layout of the game with the team
- * *Jessie Xu*
-    * Discussed the layout of the game with the team
- * *Wassim Wazzi*
-     * Discussed the layout of the game with the team
+* *Kevin Yu*
+   * Wrote the descriptions for the M1.
+   * Drew the sidebar for the cards in Figma.
+   * Discussed the layout of the game with the team.
+* *Rui Cong Su*
+   * Reviewed and elaborated onto descriptions for the M1.
+   * Discussed the layout of the game with the team.
+* *Felicia Sun*
+   * Discussed the layout of the game with the team.
+* *Youssef Samaan*
+   * Created some designs for the game.
+   * Reviewed and elaborated onto descriptions for the M1.
+   * Discussed the layout of the game with the team.
+* *Jessie Xu*
+   * Discussed the layout of the game with the team.
+* *Wassim Wazzi*
+   * Discussed the layout of the game with the team.
 
 ### Tasks missed, scheduled for this report
 
  * **
  * **
- * *Nothing so far*
+* *Nothing so far*
 
 ### Top 3 unexpected challenges encountered since last report
- * Agreeing on a layout
- * Splitting tasks (only resolved late in the week)
+
+* Agreeing on a layout.
+* Splitting tasks (only resolved late in the week).
 
 ### Top 3 lessons learned since last report
 
- * *Some members learned git*
- * *Some members learned about REST*
- * *Some members got familiar with the LobbyService*
+* *Some members learned git*
+* *Some members learned about REST*
+* *Some members got familiar with the LobbyService*
 
 ### 3 most critical bugs in current functionality (optional)
 
- * *Nothing so far*
-
+* *Nothing so far*
 
 ### Contribution statement
 
- * *Kevin contributed 16.66% of the work since last week.*
- * *Rui contributed 16.66% of the work since last week.*
- * *Felicia contributed 16.66% of the work since last week.*
- * *Youssef contributed 16.66% of the work since last week.*
- * *Jessie contributed 16.66% of the work since last week.*
- * *Wassim contributed 16.66% of the work since last week.*
+* *Kevin contributed 16.66% of the work since last week.*
+* *Rui contributed 16.66% of the work since last week.*
+* *Felicia contributed 16.66% of the work since last week.*
+* *Youssef contributed 16.66% of the work since last week.*
+* *Jessie contributed 16.66% of the work since last week.*
+* *Wassim contributed 16.66% of the work since last week.*
 
 ### Team mood
 
- * *Everything great, this course is awesome.*
+* *Everything great, this course is awesome.*
