changed percentage and added work to do

--- a/reports/2022-10-03.md
+++ b/reports/2022-10-03.md
@@ -21,6 +21,8 @@
 ### 3 most outstanding tasks scheduled until the next report, per team member
 
  * *Kevin Yu*
+    * Do the Vending Machine exercises.
+    * Do the restify exercises.
  * *Rui Cong Su*
  * *Felicia Sun*
     * Do the Vending Machine exercises.
@@ -78,12 +80,12 @@
 
 ### Contribution statement
 
- * *Kevin contributed 16.66% of the work since last week.*
- * *Rui contributed 16.66% of the work since last week.*
- * *Felicia contributed 16.66% of the work since last week.*
- * *Youssef contributed 16.66% of the work since last week.*
- * *Jessie contributed 16.66% of the work since last week.*
- * *Wassim contributed 16.66% of the work since last week.*
+ * *Kevin contributed 20% of the work since last week.*
+ * *Rui contributed 20% of the work since last week.*
+ * *Felicia contributed 20% of the work since last week.*
+ * *Youssef contributed 20% of the work since last week.*
+ * *Jessie contributed 10% of the work since last week.*
+ * *Wassim contributed 10% of the work since last week.*
 
 ### Team mood
 
