made some changes to my parts on the report

--- a/reports/2022-10-10.md
+++ b/reports/2022-10-10.md
@@ -29,8 +29,7 @@
     * Do the restify exercises.
  * *Youssef Samaan*
     * Do the restify exercise.
-    * Do some exercises from the lecture.
-    * Play the game again with the team on Tuesday.
+    * Do some exercises from the lecture and write some notes.
  * *Jessie Xu*
     * Review the lecture and take notes.
  * *Wassim Wazzi*
@@ -44,7 +43,7 @@
  * *Felicia Sun*
     * Played the game with the team on Tuesday.
  * *Youssef Samaan*
-    * 
+    * Played the game with the team on Tuesday.
  * *Jessie Xu*
     * 
  * *Wassim Wazzi*
@@ -58,8 +57,9 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
- * Agreeing on a layout.
- * Splitting tasks (only resolved late in the week).
+ * 
+ *
+ *
 
 ### Top 3 lessons learned since last report
 
@@ -69,7 +69,7 @@
 
 ### 3 most critical bugs in current functionality (optional)
 
- * *Some debates about parts of the UI functionality.*
+ * **
 
 ### Contribution statement
 
