--- a/reports/2022-10-10.md
+++ b/reports/2022-10-10.md
@@ -57,7 +57,7 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
- * 
+ * Midterms made it difficult to complete some tasks from the last report.
  *
  *
 
