--- a/reports/2022-10-10.md
+++ b/reports/2022-10-10.md
@@ -33,6 +33,9 @@
  * *Jessie Xu*
     * Review the lecture and take notes.
  * *Wassim Wazzi*
+   * Do the restify exercise.
+   * Do use case and modelling exercises.
+   * Work on M2
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -47,7 +50,7 @@
  * *Jessie Xu*
     * 
  * *Wassim Wazzi*
-    * 
+    * Worked on M2
 
 ### Tasks missed, scheduled for this report
 
@@ -78,7 +81,7 @@
  * *Felicia contributed 20% of the work since last week.*
  * *Youssef contributed 20% of the work since last week.*
  * *Jessie contributed 10% of the work since last week.*
- * *Wassim contributed 10% of the work since last week.*
+ * *Wassim contributed 20% of the work since last week.*
 
 ### Team mood
 
