added other people's contributions

--- a/reports/2022-10-17.md
+++ b/reports/2022-10-17.md
@@ -41,16 +41,23 @@
 
  * *Kevin Yu*
     * Worked on M2
+    * Did initial structure for all the usecases 
+    * revised the use case diagram 
  * *Rui Cong Su*
     * Worked on M2
  * *Felicia Sun*
     * Worked on M2
  * *Youssef Samaan*
     * Worked on M2
+    * revised the use case diagram 
+    * revised usecases
  * *Jessie Xu*
     * Worked on M2
+    * Made most of the use case diagram 
  * *Wassim Wazzi*
     * Worked on M2
+   * revised the use case diagram 
+   * Did usecases 
 
 ### Tasks missed, scheduled for this report
 
