--- a/reports/2022-10-17.md
+++ b/reports/2022-10-17.md
@@ -30,8 +30,9 @@
     * Do the restify exercises.
     * Do the Vending Machine exercises.
  * *Youssef Samaan*
+    * Start preparing for the next milestone.
     * Do the restify exercise.
-    * Do some exercises from the lecture and write some notes.
+    * Do some exercises from the lecture.
  * *Jessie Xu*
     * Review the lecture and take notes.
  * *Wassim Wazzi*
@@ -55,8 +56,8 @@
     * Worked on M2
  * *Youssef Samaan*
     * Worked on M2
-    * Revised the use case diagram 
-    * Revised usecases
+    * Revised and made changes to the use case diagram 
+    * Revised and made changes to the usecases
  * *Jessie Xu*
     * Worked on M2
     * Made most of the use case diagram 
