--- a/reports/2022-10-17.md
+++ b/reports/2022-10-17.md
@@ -36,9 +36,9 @@
  * *Jessie Xu*
     * Review the lecture and take notes.
  * *Wassim Wazzi*
-   * Do the restify exercise.
-   * Do use case and modelling exercises.
-   * Work on M2
+     * Review lectures.
+     * Learn python frontend frameworks.
+     * Do exercises from the lectures.
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -64,7 +64,7 @@
  * *Wassim Wazzi*
     * Worked on M2
     * Revised the use case diagram 
-    * Did usecases 
+    * Did the use cases 
 
 ### Tasks missed, scheduled for this report
 
@@ -75,12 +75,14 @@
 ### Top 3 unexpected challenges encountered since last report
 
  * Midterms made it difficult to complete some tasks from the last report.
- *
- *
+ * Knowing where and how to write extensions for use cases
+ * Had to figure out all the edge cases of the game, and make decisions on the implementation
 
 ### Top 3 lessons learned since last report
 
- * *Planning meeting times is hard 
+ * Planning meeting times is hard 
+ * How the Lobby Service works
+ * Better communication in the team
 
 ### 3 most critical bugs in current functionality (optional)
 
