aadded my contribution for this week

--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -42,7 +42,7 @@
 ### Tasks achieved, scheduled for this report, per team member
 
  * *Kevin Yu*
-    * 
+    * Split all the sprites into individual pngs
  * *Rui Cong Su*
     * 
  * *Felicia Sun*
@@ -62,7 +62,7 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
- * Midterms made it difficult to complete some tasks from the last report.
+ * 
  * 
 
 ### Top 3 lessons learned since last report
@@ -75,8 +75,8 @@
 
 ### Contribution statement
 
- * *Kevin contributed 10% of the work since last week.*
- * *Rui contributed 20% of the work since last week.*
+ * *Kevin contributed 20% of the work since last week.*
+ * *Rui contributed 10% of the work since last week.*
  * *Felicia contributed 20% of the work since last week.*
  * *Youssef contributed 20% of the work since last week.*
  * *Jessie contributed 10% of the work since last week.*
