--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -35,9 +35,8 @@
  * *Jessie Xu*
     * Review the lecture and take notes.
  * *Wassim Wazzi*
-     * Review lectures.
-     * Learn python frontend frameworks.
-     * Do exercises from the lectures.
+     * Keep working on the code for M3
+     * Start work on M4
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -52,7 +51,8 @@
  * *Jessie Xu*
     * 
  * *Wassim Wazzi*
-    * 
+    * learned pygame 
+    * Created initial Gui for the game
 
 ### Tasks missed, scheduled for this report
 
@@ -62,12 +62,12 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
- * 
+ * knowing which tasks should be left for the backend
  * 
 
 ### Top 3 lessons learned since last report
 
- * 
+ * pygame
 
 ### 3 most critical bugs in current functionality (optional)
 
