--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -4,84 +4,91 @@
 
 ### Group
 
- * Hexanome-06
- * Python
+* Hexanome-06
+* Python
 
 ### Team Members
 
- * Kevin Yu
- * Rui Cong Su
- * Felicia Sun
- * Youssef Samaan
- * Jessie Xu
- * Wassim Wazzi
+* Kevin Yu
+* Rui Cong Su
+* Felicia Sun
+* Youssef Samaan
+* Jessie Xu
+* Wassim Wazzi
 
 ## Status
 
 ### 3 most outstanding tasks scheduled until the next report, per team member
 
- * *Kevin Yu*
-    * Do use case and modelling exercises.
- * *Rui Cong Su*
-    * Review lectures
-    * Do lecture exercises
- * *Felicia Sun*
-    * Study lecture slides. 
-    * Do the exercises.
- * *Youssef Samaan*
-    * Start preparing for the next milestone.
-    * Do the restify exercise.
-    * Do some exercises from the lecture.
- * *Jessie Xu*
-    * Review the lecture and take notes.
- * *Wassim Wazzi*
-     * Keep working on the code for M3
-     * Start work on M4
+* *Kevin Yu*
+
+  * Do use case and modelling exercises.
+* *Rui Cong Su*
+
+  * Review lectures
+  * Do lecture exercises
+* *Felicia Sun*
+
+  * Study lecture slides.
+  * Do the exercises.
+* *Youssef Samaan*
+
+  * Keep working on the code for M3
+  * Start work on M4
+  * Do the restify exercise.
+* *Jessie Xu*
+
+  * Review the lecture and take notes.
+* *Wassim Wazzi*
+
+  * Keep working on the code for M3
+  * Start work on M4
 
 ### Tasks achieved, scheduled for this report, per team member
 
- * *Kevin Yu*
-    * Split all the sprites into individual pngs
- * *Rui Cong Su*
-    * 
- * *Felicia Sun*
-    * 
- * *Youssef Samaan*
-    * 
- * *Jessie Xu*
-    * 
- * *Wassim Wazzi*
-    * learned pygame 
-    * Created initial Gui for the game
+* *Kevin Yu*
+  * Split all the sprites into individual pngs
+* *Rui Cong Su*
+* *Felicia Sun*
+* *Youssef Samaan*
+  * Learned a bit of pygame.
+  * Seperated some of the cards to better identify them.
+  * started to work on the login.
+* *Jessie Xu*
+* *Wassim Wazzi*
+  * learned pygame
+  * Created initial Gui for the game
 
 ### Tasks missed, scheduled for this report
 
- * **
- * **
- * *Nothing so far*
+---
+
+---
+
+* *Nothing so far*
 
 ### Top 3 unexpected challenges encountered since last report
 
- * knowing which tasks should be left for the backend
- * 
+* knowing which tasks should be left for the backend
+* 
 
 ### Top 3 lessons learned since last report
 
- * pygame
+* pygame
 
 ### 3 most critical bugs in current functionality (optional)
 
- * **
+---
 
 ### Contribution statement
 
- * *Kevin contributed 20% of the work since last week.*
- * *Rui contributed 10% of the work since last week.*
- * *Felicia contributed 20% of the work since last week.*
- * *Youssef contributed 20% of the work since last week.*
- * *Jessie contributed 10% of the work since last week.*
- * *Wassim contributed 20% of the work since last week.*
+* *Kevin contributed 20% of the work since last week.*
+* *Rui contributed 10% of the work since last week.*
+* *Felicia contributed 20% of the work since last week.*
+* *Youssef contributed 20% of the work since last week.*
+* *Jessie contributed 10% of the work since last week.*
+* *Wassim contributed 20% of the work since last week.*
 
 ### Team mood
 
- * *Everything great, this course is awesome.*
+* *Everything great, this course is awesome.*
