seperated the rest of the cards and updated the report

--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -35,6 +35,7 @@
 
   * Keep working on the code for M3
   * Start work on M4
+  * Learn more pygame
   * Do the restify exercise.
 * *Jessie Xu*
 
@@ -52,7 +53,7 @@
 * *Felicia Sun*
 * *Youssef Samaan*
   * Learned a bit of pygame.
-  * Seperated some of the cards to better identify them.
+  * Seperated the cards to better identify them.
   * started to work on the login.
 * *Jessie Xu*
 * *Wassim Wazzi*
