--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -36,8 +36,9 @@
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
-  * Keep working on the code for M3
-  * Start work on M4
+  * Make login use lobby service
+  * Add sessions page
+  * Add improvements to the game, and review PRs
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -52,8 +53,9 @@
   * Started to work on the login.
 * *Jessie Xu*
 * *Wassim Wazzi*
-  * Learned pygame
-  * Created initial Gui for the game
+  * Created the GUI for the board
+  * Added functionality to buy/reserve card, noble and tokens, and cards are replaced with new ones
+  * Met with the team, discussed the next steps and divided tasks
 
 ### Tasks missed, scheduled for this report
 
@@ -65,16 +67,18 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
-* Knowing which tasks should be left for the backend
-* 
+* Making buttons have rounded corners :D
+* Making the GUI look good, and choosing the right colors
 
 ### Top 3 lessons learned since last report
 
 * Pygame
+* 
 
 ### 3 most critical bugs in current functionality (optional)
 
----
+* No limits on cards that can be taken
+
 
 ### Contribution statement
 
