--- a/reports/2022-10-31.md
+++ b/reports/2022-10-31.md
@@ -33,9 +33,7 @@
   * Do the exercises.
 * *Youssef Samaan*
   * Keep working on the code for M3
-  * Start work on M4
-  * Learn more pygame
-  * Do the restify exercise.
+  * Work on M4
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
@@ -46,18 +44,18 @@
 
 * *Kevin Yu*
   * Made the sidebar
-  * added scrolling function to sidebar 
+  * added scrolling function to sidebar
   * reviewed concepts from lecture 8-12
 * *Rui Cong Su*
   * Made the sidebar
-  * Made bought cards, nobles appear in sidebar 
+  * Made bought cards, nobles appear in sidebar
   * reviewed concepts from lecture 8-12
 * *Felicia Sun*
-  * Installed pygame. 
+  * Installed pygame.
 * *Youssef Samaan*
-  * Learned a bit of pygame.
-  * Separated the cards to better identify them.
-  * Started to work on the login.
+  * Created login GUI.
+  * Made minor fixes in different places.
+  * Met with the team, discussed the next steps and divided tasks.
 * *Jessie Xu*
 * *Wassim Wazzi*
   * Learned pygame
