removed the recent updates made to last report

--- a/reports/2022-10-24.md
+++ b/reports/2022-10-24.md
@@ -36,9 +36,8 @@
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
-  * Make login use lobby service
-  * Add sessions page
-  * Add improvements to the game, and review PRs
+  * Keep working on the code for M3.
+  * Start work on M4.
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -46,16 +45,15 @@
   * Split all the sprites into individual pngs
 * *Rui Cong Su*
 * *Felicia Sun*
-  * Installed pygame. 
+  * Installed pygame.
 * *Youssef Samaan*
   * Learned a bit of pygame.
   * Separated the cards to better identify them.
   * Started to work on the login.
 * *Jessie Xu*
 * *Wassim Wazzi*
-  * Created the GUI for the board
-  * Added functionality to buy/reserve card, noble and tokens, and cards are replaced with new ones
-  * Met with the team, discussed the next steps and divided tasks
+  * Learned pygame
+  * Created initial Gui for the game
 
 ### Tasks missed, scheduled for this report
 
@@ -67,18 +65,15 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
-* Making buttons have rounded corners :D
-* Making the GUI look good, and choosing the right colors
+---
+
+
 
 ### Top 3 lessons learned since last report
 
 * Pygame
-* 
 
 ### 3 most critical bugs in current functionality (optional)
-
-* No limits on cards that can be taken
-
 
 ### Contribution statement
 
