--- a/reports/2022-11-7.md
+++ b/reports/2022-11-7.md
@@ -34,9 +34,9 @@
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
-  * Make login use lobby service
-  * Add sessions page
-  * Add improvements to the game, and review PRs
+  * Work on M4
+  * Review other team members' work
+  * Add improvements to the game
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -52,9 +52,9 @@
   * Met with the team, discussed the next steps and divided tasks.
 * *Jessie Xu*
 * *Wassim Wazzi*
-  * Created the GUI for the board
-  * Added functionality to buy/reserve card, noble and tokens, and cards are replaced with new ones
-  * Met with the team, discussed the next steps and divided tasks
+  * Made login use lobby service
+  * Reviewed Pull Requests
+  * Met with the team, prepared the demo and discussed the next steps
 
 ### Tasks missed, scheduled for this report
 
@@ -70,11 +70,12 @@
 
 ### Top 3 lessons learned since last report
 
-* Pygame
+* Lobby Service API
 
 ### 3 most critical bugs in current functionality (optional)
 
-* No limits on cards that can be taken
+* Minimizing screen causes the game to crash
+* Weird transition from login to game
 
 ### Contribution statement
 
