--- a/reports/2022-11-7.md
+++ b/reports/2022-11-7.md
@@ -29,8 +29,9 @@
   * Start thinking about M4
   * Study lecture slides + exercises
 * *Youssef Samaan*
-  * Keep working on the code for M3
-  * Work on M4
+  * Keep working on M4.
+  * Review other team members' work.
+  * Meet with the team to see what else needs to be done.
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
@@ -47,9 +48,9 @@
 * *Felicia Sun*
   * Implemented player class.
 * *Youssef Samaan*
-  * Created login GUI.
-  * Made minor fixes in different places.
-  * Met with the team, discussed the next steps and divided tasks.
+  * Worked on the Protocol model.
+  * Presented the demo for M3.
+  * Met with the team to discuss the next milestone.
 * *Jessie Xu*
 * *Wassim Wazzi*
   * Made login use lobby service
