--- a/reports/2022-11-14.md
+++ b/reports/2022-11-14.md
@@ -29,9 +29,9 @@
   * Study lecture slides for final
   * M5 preparation
 * *Youssef Samaan*
-  * work on server integration
-  * Review other team members' work.
-  * Meet with the team to see what else needs to be done.
+  * Work on M5.
+  * Do lecture exercises.
+  * Prepare for the final.
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
@@ -50,9 +50,9 @@
   * Worked on Environment Model
   * Completed Operation Model
 * *Youssef Samaan*
-  * Worked on the Protocol model.
-  * verified the consistency of models
-  * assigned tasks to other members
+  * Worked on the Protocol model and helped other team members.
+  * verified the consistency of models.
+  * assigned tasks to other members.
 * *Jessie Xu*
 * *Wassim Wazzi*
   * Made login use lobby service
