--- a/reports/2022-11-14.md
+++ b/reports/2022-11-14.md
@@ -35,8 +35,9 @@
 * *Jessie Xu*
   * Review the lecture and take notes.
 * *Wassim Wazzi*
-  * work on server integration
-  * Add improvements to the game
+  * work on M5
+  * work on lobby service and server integration
+  * prepare for final exam
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -55,9 +56,9 @@
   * assigned tasks to other members.
 * *Jessie Xu*
 * *Wassim Wazzi*
-  * Made login use lobby service
-  * Reviewed Pull Requests
-  * Met with the team, prepared the demo and discussed the next steps
+  * Worked on Concept model and Operation Model
+  * reviewed other models
+  * started work on M5
 
 ### Tasks missed, scheduled for this report
 
