--- a/reports/2022-11-21.md
+++ b/reports/2022-11-21.md
@@ -30,8 +30,7 @@
   * Do exercises from class
   * Prepare for final exam
 * *Youssef Samaan*
-  * Work on M5.
-  * Do lecture exercises.
+  * Continue working on M5.
   * Prepare for the final.
 * *Jessie Xu*
   * Work on M5
@@ -52,7 +51,8 @@
   * Attended class
   * Did some rest exercises
 * *Youssef Samaan*
-  * 
+  * Started to work on M5.
+  * Started working on the API design.
 * *Jessie Xu*
   * 
 * *Wassim Wazzi*
@@ -82,11 +82,11 @@
 
 ### Contribution statement
 
-* *Kevin contributed 14% of the work since last week.*
-* *Rui contributed 14% of the work since last week.*
-* *Felicia contributed 14% of the work since last week.*
-* *Youssef contributed 14% of the work since last week.*
-* *Jessie contributed 14% of the work since last week.*
+* *Kevin contributed 10% of the work since last week.*
+* *Rui contributed 10% of the work since last week.*
+* *Felicia contributed 10% of the work since last week.*
+* *Youssef contributed 30% of the work since last week.*
+* *Jessie contributed 10% of the work since last week.*
 * *Wassim contributed 30% of the work since last week.*
 
 ### Team mood
