--- a/reports/2022-11-28.md
+++ b/reports/2022-11-28.md
@@ -22,6 +22,7 @@
 
 * *Kevin Yu*
   * Work on M5
+  * Do session frontend UI
 * *Rui Cong Su*
   * Work on M5
   * Work on server integration
@@ -85,12 +86,12 @@
 
 ### Contribution statement
 
-* *Kevin contributed 0% of the work since last week.*
-* *Rui contributed 0% of the work since last week.*
-* *Felicia contributed 0% of the work since last week.*
-* *Youssef contributed 0% of the work since last week.*
-* *Jessie contributed 0% of the work since last week.*
-* *Wassim contributed 0% of the work since last week.*
+* *Kevin contributed 10% of the work since last week.*
+* *Rui contributed 10% of the work since last week.*
+* *Felicia contributed 10% of the work since last week.*
+* *Youssef contributed 30% of the work since last week.*
+* *Jessie contributed 10% of the work since last week.*
+* *Wassim contributed 30% of the work since last week.*
 
 ### Team mood
 
