--- a/reports/2022-11-28.md
+++ b/reports/2022-11-28.md
@@ -39,9 +39,9 @@
   * Work on M5
   * Review the lectures and take notes.
 * *Wassim Wazzi*
-  * Work on M5
-  * Work on lobby service and server integration
   * Prepare for final exam
+  * Do the demo
+  * do practice exercises
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -59,9 +59,9 @@
 * *Jessie Xu*
   * Start to work on M5.
 * *Wassim Wazzi*
-  * Started work on M5 and integration with LS
-  * Learned more about Lobby Service API
-  * Reviewed material
+  * created LS/server integration
+  * server actions
+  * frontend actions for taking cards and updating players
 
 ### Tasks missed, scheduled for this report
 
@@ -84,6 +84,7 @@
 
 * Minimizing screen causes the game to crash
 * Weird transition from login to game
+* Sometimes the thread to update game interferes with the display thread, and the game crashes
 
 ### Contribution statement
 
