added my part in the report

--- a/reports/2022-11-28.md
+++ b/reports/2022-11-28.md
@@ -28,13 +28,14 @@
   * Work on server integration
 * *Felicia Sun*
   * Work on M5
-  * Prepare for final exam once M5 is done 
-    *  do exercises from class
-    *  read slides
-    *  crib sheet
+  * Prepare for final exam once M5 is done
+    * do exercises from class
+    * read slides
+    * crib sheet
 * *Youssef Samaan*
   * Continue working on M5.
   * Prepare for the final.
+  * Review materials.
 * *Jessie Xu*
   * Work on M5
   * Review the lectures and take notes.
@@ -54,8 +55,9 @@
 * *Felicia Sun*
   * Worked on M5
 * *Youssef Samaan*
-  * Started to work on M5.
-  * Started working on the API design.
+  * Worked on M5.
+  * Met with the team to discuss progress and new goals.
+  * Finished working on the API design.
 * *Jessie Xu*
   * Start to work on M5.
 * *Wassim Wazzi*
