--- a/reports/2023-01-09.md
+++ b/reports/2023-01-09.md
@@ -29,6 +29,9 @@
   * Prepare for next milestones
   * Review fall 2022 material
 * *Youssef Samaan*
+  * Attend class.
+  * Talk to the team.
+  * Start working on the project.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -42,6 +45,7 @@
   * Created report
   * Attended class, took notes
 * *Youssef Samaan*
+  * Attend class.
 * *Jessie Xu*
   * Attended class
 * *Wassim Wazzi*
