--- a/reports/2023-01-16.md
+++ b/reports/2023-01-16.md
@@ -29,9 +29,8 @@
   * Start on M6
   * Learn from midterm
 * *Youssef Samaan*
-  * Attend class.
   * Talk to the team.
-  * Start working on the project.
+  * Start working on the project and M6.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -47,7 +46,7 @@
   * Created report
   * Attended class, took notes
 * *Youssef Samaan*
-  * Attend class.
+  * Attened class.
 * *Jessie Xu*
   * Attended class
 * *Wassim Wazzi*
@@ -63,7 +62,7 @@
 
 ### Top 3 unexpected challenges encountered since last report
 
-* Separation between Client and Server in some models
+* 
 
 ### Top 3 lessons learned since last report
 
