--- a/reports/2023-01-16.md
+++ b/reports/2023-01-16.md
@@ -21,7 +21,8 @@
 ### 3 most outstanding tasks scheduled until the next report, per team member
 
 * *Kevin Yu*
- * Start fixing ui
+* attend class
+ * Start m6
  * Review material
 * *Rui Cong Su*
 * *Felicia Sun*
@@ -75,12 +76,12 @@
 
 ### Contribution statement
 
-* *Kevin contributed 16.66% of the work since last week.*
-* *Rui contributed 16.66% of the work since last week.*
-* *Felicia contributed 16.66% of the work since last week.*
-* *Youssef contributed 16.66% of the work since last week.*
-* *Jessie contributed 16.66% of the work since last week.*
-* *Wassim contributed 16.66% of the work since last week.*
+* *Kevin contributed 10% of the work since last week.*
+* *Rui contributed 20% of the work since last week.*
+* *Felicia contributed 20% of the work since last week.*
+* *Youssef contributed 20% of the work since last week.*
+* *Jessie contributed 20% of the work since last week.*
+* *Wassim contributed 10% of the work since last week.*
 
 ### Team mood
 
