--- a/reports/2023-01-23.md
+++ b/reports/2023-01-23.md
@@ -23,6 +23,7 @@
 * *Kevin Yu*
  * Attend class
  * Start M6
+ * fix ui
  * Review material
 * *Rui Cong Su*
 * *Felicia Sun*
@@ -78,11 +79,11 @@
 ### Contribution statement
 
 * *Kevin contributed 10% of the work since last week.*
-* *Rui contributed 20% of the work since last week.*
+* *Rui contributed 10% of the work since last week.*
 * *Felicia contributed 20% of the work since last week.*
 * *Youssef contributed 20% of the work since last week.*
 * *Jessie contributed 20% of the work since last week.*
-* *Wassim contributed 10% of the work since last week.*
+* *Wassim contributed 20% of the work since last week.*
 
 ### Team mood
 
