--- a/reports/2023-01-23.md
+++ b/reports/2023-01-23.md
@@ -32,7 +32,8 @@
   * Learn from midterm
 * *Youssef Samaan*
   * Talk to the team.
-  * Start working on the project and M6.
+  * Work on the game and M6.
+  * Review last lecture.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -49,7 +50,7 @@
   * Created report
   * Attended class
 * *Youssef Samaan*
-  * Attended class.
+  * Though about M6 and what else needs to be done for the game.
 * *Jessie Xu*
   * Attended class
 * *Wassim Wazzi*
