--- a/reports/2023-01-30.md
+++ b/reports/2023-01-30.md
@@ -30,9 +30,8 @@
   * Work on M6 + code
   * Learn from midterm
 * *Youssef Samaan*
-  * Talk to the team.
   * Work on the game and M6.
-  * Review last lecture.
+  * Attend class.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -52,8 +51,8 @@
   * Met with team
   * Attended class
 * *Youssef Samaan*
-  * Met with team
-  * Though about M6 and what else needs to be done for the game.
+  * Met with team.
+  * Wrote an outline for M6 and some things we need to take care of for the game.
 * *Jessie Xu*
   * Met with team
   * Attended class
