Wassim update report

--- a/reports/2023-01-30.md
+++ b/reports/2023-01-30.md
@@ -37,8 +37,8 @@
   * Review material
 * *Wassim Wazzi*
   * Attend class
-  * Review missed notes
-  * Start working on assignment
+  * Review lecture notes
+  * Work on M6
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -58,7 +58,8 @@
   * Attended class
 * *Wassim Wazzi*
   * Met with team
-  * Attended class  
+  * Attended class
+  * started work on assignment
 
 ### Tasks missed, scheduled for this report
 
