--- a/reports/2023-02-06.md
+++ b/reports/2023-02-06.md
@@ -47,8 +47,10 @@
 
 * *Kevin Yu*
   * Met with team
+  * started working on M6's perform red card action
 * *Rui Cong Su*
   * Met with team
+  * started working on M6's perform red card action
 * *Felicia Sun*
   * Met with team
   * Created report
