--- a/reports/2023-02-06.md
+++ b/reports/2023-02-06.md
@@ -33,8 +33,9 @@
   * Work on M6 (starting with TakeTokens sequence diagram) + code for M7
   * Prepare for midterm
 * *Youssef Samaan*
-  * Work on the game and M6.
+  * Keep working on the game and M6.
   * Attend class.
+  * Meet with the team before submitting M6 and for double-checking all the work.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -57,7 +58,7 @@
   * Attended class
 * *Youssef Samaan*
   * Met with team.
-  * Wrote an outline for M6 and some things we need to take care of for the game.
+  * Finished one sequence diagram for M6.
 * *Jessie Xu*
   * Met with team
   * Attended class
