--- a/reports/2023-02-13.md
+++ b/reports/2023-02-13.md
@@ -22,20 +22,20 @@
 
 * *Kevin Yu*
   * Attend class
-  * work on M6
+  * work on M7
   * finish fix ui
 * *Rui Cong Su*
   * Attend class
-  * work on M6
+  * work on M7
   * help fix ui
 * *Felicia Sun*
   * 7, 17, 19, 
   * Work code for M7
   * Prepare for midterm
 * *Youssef Samaan*
-  * Keep working on the game and M6.
+  * Start working on M7.
   * Attend class.
-  * Meet with the team before submitting M6 and for double-checking all the work.
+  * Meet with the team and start talking about how to start M7.
 * *Jessie Xu* 
   * Attended class
   * Review material
@@ -59,7 +59,9 @@
   * M6 Interaction (PerformTakeTokensAction) and Design
 * *Youssef Samaan*
   * Met with team.
-  * Finished one sequence diagram for M6.
+  * Finished Claim Noble sequence diagram for M6.
+  * Helped and reviewed the team's sequence diagrams.
+  * Worked on Design Class Model and reviewed it before submission.
 * *Jessie Xu*
   * Met with team
   * Attended class
