--- a/reports/2023-02-20.md
+++ b/reports/2023-02-20.md
@@ -32,7 +32,7 @@
   * Work on M7
   * Prepare for final (modelling, exercises)
 * *Youssef Samaan*
-  * Start working on M7.
+  * Continue working on M7.
   * Attend class.
   * Meet with the team and start talking about how to start M7.
 * *Jessie Xu* 
@@ -54,7 +54,8 @@
 * *Felicia Sun*
   * Attended class
 * *Youssef Samaan*
-  * 
+  * Added the JSON data for both the nobles and Trading route.
+  * Attended class reviewed past lectures
 * *Jessie Xu*
   * Attended class
 * *Wassim Wazzi*
