--- a/reports/2023-02-20.md
+++ b/reports/2023-02-20.md
@@ -55,6 +55,7 @@
   * Attended class
 * *Youssef Samaan*
   * Added the JSON data for both the nobles and Trading route.
+  * Added Sprites for the extensions.
   * Attended class reviewed past lectures
 * *Jessie Xu*
   * Attended class
