--- a/reports/2023-03-06.md
+++ b/reports/2023-03-06.md
@@ -33,7 +33,8 @@
     * Prepare for final (modelling, exercises)
 * *Youssef Samaan*
     * Continue working on M7.
-    * Talk with the team and try the game as more functionality gets added.
+    * Test the game before presentation.
+    * study for final.
 * *Jessie Xu*
     * Attended class
     * Review material
@@ -53,10 +54,8 @@
 * *Felicia Sun*
     * Attended class again
 * *Youssef Samaan*
-    * Refactored come of the code in the backend.
-    * Added more functionality.
-    * discussed the M7 with the team.
-    * Attended class.
+    * Finished most of the actions.
+    * Wrote tests.
 * *Jessie Xu*
     * Attended class
 * *Wassim Wazzi*
