updated the report and added the .md file extention.

--- a/reports/2023-03-13.md
+++ b/reports/2023-03-13.md
@@ -32,9 +32,8 @@
     * Work on M7 (add trading routes extension)
     * Prepare for final (modelling, exercises)
 * *Youssef Samaan*
-    * Continue working on M7.
-    * Test the game before presentation.
-    * study for final.
+    * Work on M8.
+    * Meet with the team to discuss the next steps.
 * *Jessie Xu*
     * Attended class
     * Review material
@@ -58,8 +57,8 @@
 * *Felicia Sun*
     * Worked on m7 javadoc, checkstyle
 * *Youssef Samaan*
-    * Finished most of the actions.
-    * Wrote tests.
+    * Worked on M7.
+    * Prepared for the final.
 * *Jessie Xu*
     * Wrote tests
 * *Wassim Wazzi*
