--- a/reports/2023-03-13.md
+++ b/reports/2023-03-13.md
@@ -41,7 +41,8 @@
     * Attend group meeting
 * *Wassim Wazzi*
     * Keep improving the code
-    * Add more tests and other tradreoutes
+    * Work on M8
+    * add traderoutes powers
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -63,10 +64,10 @@
     * Wrote tests
     * met with team to study for final
 * *Wassim Wazzi*
-    * Met with the team
-    * Worked on the backend, added cities expansion and tests, and other stuff
-    * tested things manually (end-to-end tests)
-    * met with team to study for final
+    * Studied for the final
+    * met with the team
+    * Completed the backend for M7
+    * Worked on the fronted for m7
 
 ### Tasks missed, scheduled for this report
 
@@ -82,7 +83,7 @@
 
 ### Top 3 lessons learned since last report
 
-* Lobby Service API
+* splendor extensions
 
 ### 3 most critical bugs in current functionality (optional)
 
