--- a/reports/2023-03-20.md
+++ b/reports/2023-03-20.md
@@ -50,6 +50,8 @@
 * *Rui Cong Su*
 * *Felicia Sun*
 * *Youssef Samaan*
+  * Wrote the next action plan to tackle M8.
+  * Started thinking about implementation detail.
 * *Jessie Xu*
 * *Wassim Wazzi*
 
