--- a/reports/2023-03-20.md
+++ b/reports/2023-03-20.md
@@ -40,9 +40,9 @@
     * Work on M8
     * Attend group meeting
 * *Wassim Wazzi*
-    * Keep improving the code
+    * plan the next steps
     * Work on M8
-    * add traderoutes powers
+    * allow selection of different games on the backend
 
 ### Tasks achieved, scheduled for this report, per team member
 
@@ -54,9 +54,10 @@
   * Started thinking about implementation detail.
 * *Jessie Xu*
 * *Wassim Wazzi*
+  * making a list of what's left to do
 
 ### Tasks missed, scheduled for this report
-
+* Adding traderoute powers
 ---
 
 ---
