--- a/reports/2023-03-27.md
+++ b/reports/2023-03-27.md
@@ -32,8 +32,7 @@
     * Work on M8
     * Meet with team
 * *Youssef Samaan*
-    * Work on M8.
-    * Meet with the team to discuss the next steps.
+    * Continue working on M8.
 * *Jessie Xu*
     * Attended class
     * Review material
@@ -50,8 +49,7 @@
 * *Rui Cong Su*
 * *Felicia Sun*
 * *Youssef Samaan*
-  * Wrote the next action plan to tackle M8.
-  * Started thinking about implementation detail.
+  * Started working on the actions.
 * *Jessie Xu*
 * *Wassim Wazzi*
   * making a list of what's left to do
