--- a/reports/2023-04-03.md
+++ b/reports/2023-04-03.md
@@ -32,8 +32,8 @@
     * Work on M8
     * Meet with team
 * *Youssef Samaan*
-    * Work on M8.
-    * Meet with the team to discuss the next steps.
+    * Continue working on M8.
+    * Meet with the team to discuss the next steps, see what is left and the progress.
 * *Jessie Xu*
     * Attended class
     * Review material
@@ -53,8 +53,8 @@
 * * finished take token ui beautification and refresh token
 * *Felicia Sun*
 * *Youssef Samaan*
-  * Wrote the next action plan to tackle M8.
-  * Started thinking about implementation detail.
+  * All actions done.
+  * Met with some teammates.
 * *Jessie Xu*
 * *Wassim Wazzi*
   * making a list of what's left to do
