--- a/reports/2023-04-03.md
+++ b/reports/2023-04-03.md
@@ -24,6 +24,7 @@
     * talk with rui
     * Work on M8
     * work on login ui
+    * work on buying reserve cards
 * *Rui Cong Su*
     * talk with kevin
     * Work on M8
